Add routing, authentication, and activities pages
Integrates react-router-dom for client-side routing, adds authentication context and protected routes, and implements new pages for About, Activities, Contact, Login, Register, and Profile. Updates the Navbar and Hero components for navigation and user state, introduces an Activities carousel and a vertically scrolling Activities page, and refines global styles for layout and navigation. Also updates .gitignore to exclude lockfiles.

--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,12 @@ web_modules/
 .env.production.local
 .env.local
 
+# Lockfiles (do not commit package manager lockfiles if you prefer)
+package-lock.json
+npm-shrinkwrap.json
+pnpm-lock.yaml
+yarn.lock
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
