--- a/client/.gitignore
+++ b/client/.gitignore
@@ -12,6 +12,12 @@ dist
 dist-ssr
 *.local
 
+# Lockfiles
+package-lock.json
+npm-shrinkwrap.json
+pnpm-lock.yaml
+yarn.lock
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
